# brother-ql-rs

./: Cargo.toml
.cargo/: config.toml
src/: barcode.rs  lib.rs  printer.rs  text.rs  utils.rs
src/printer/: constants.rs  job.rs  status.rs
